# memvid-rag

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: create.md  index.md  status.md
memvid-rag/.claude-plugin/: plugin.json
memvid-rag/commands/: create.md  index.md  search.md  status.md
memvid-rag/scripts/: index.py  rag_core.py  search.py
memvid-rag/skills/: SKILL.md
scripts/: create.py  index.py  search.py  status.py
skills/: SKILL.md
