[project]
name = "sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.11.5",
    "memvid-sdk>=0.1.0",
    "unstructured>=0.12.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.18.0",
]

[[tool.uv.index]]
url = "http://10.10.12.57:9000/repository/pypi-repos/simple"
default = true
